Fixed work experience title wrapping

--- a/css/style.css
+++ b/css/style.css
@@ -86,6 +86,10 @@ footer{
 	padding-left: 100px;
 }
 
+#workExperienceTitle{
+	white-space: nowrap;
+}
+
 @keyframes slideFromRight {
 	from {padding-left: 50vw;}
 	to {padding-left: 0px;}
